@@ -15,7 +15,7 @@ maven.compile.source=1.3
 maven.compile.target=1.3
 maven.junit.fork = true
 
-maven.eclipse.classpath.include = src/conf
+maven.eclipse.classpath.include = src/test-resources
 
 gettext.sourceDirectory=src/test
 gettext.outputDirectory=target/test-classes
